[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yokonex-device"
version = "0.1.0"
description = "YOKONEX 设备扫描、连接、波形执行与状态输出依赖"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "tzwgoo", email = "tzwgoo@163.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "bleak>=1.1.0",
  "cryptography>=42.0.0",
]

[project.urls]
Homepage = "https://github.com/tzwgoo/yokonex-device"
Repository = "https://github.com/tzwgoo/yokonex-device"
Issues = "https://github.com/tzwgoo/yokonex-device/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "pytest>=8.0.0",
  "anyio>=4.0.0",
  "twine>=5.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["yokonex_device*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
